<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second">

    <TextView
        android:id="@+id/txtPrompt"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtPrompt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtBill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/txtBill"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/txtNumberOfPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrompt"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtNumberOfPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/txtNumberOfPeople"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/spnQuality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBill"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="273dp"
        android:layout_height="168dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image2"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnQuality"
        app:srcCompat="@drawable/splitbill" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="334dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnCalculate"
        app:layout_constraintBottom_toTopOf="@+id/txtTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2" />

    <TextView
        android:id="@+id/txtTip"
        android:layout_width="287dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/txtTip"
        app:layout_constraintBottom_toTopOf="@+id/txtBillPerPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/txtBillPerPeople"
        android:layout_width="284dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/txtBillPerPeople"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTip" />

    <Spinner
        android:id="@+id/spnQuality"
        android:layout_width="281dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/quality"
        app:layout_constraintBottom_toTopOf="@+id/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumberOfPeople" />

</androidx.constraintlayout.widget.ConstraintLayout>